--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_8.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_8.ipynb
@@ -26,17 +26,235 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "incomplete input (4265539191.py, line 193)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[1], line 193\u001b[0;36m\u001b[0m\n\u001b[0;31m    if cols_to_check_existing:\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import logging\n",
+    "import datetime\n",
+    "import time # For conceptual scheduling\n",
+    "\n",
+    "# --- Setup Logging for Monitoring System (from Task: Architecture to Monitor Data Quality Over Time) ---\n",
+    "logging.basicConfig(\n",
+    "    filename='data_quality_log.txt',\n",
+    "    level=logging.INFO,\n",
+    "    format='%(asctime)s - %(levelname)s - %(message)s'\n",
+    ")\n",
+    "console_handler = logging.StreamHandler()\n",
+    "console_handler.setLevel(logging.INFO)\n",
+    "formatter = logging.Formatter('%(asctime)s - %(levelname)s - %(message)s')\n",
+    "console_handler.setFormatter(formatter)\n",
+    "logging.getLogger().addHandler(console_handler)\n",
+    "\n",
+    "logging.info(\"Data Quality Monitoring System Initialized.\")\n",
+    "\n",
+    "# --- Helper Function to Load Data with Error Handling ---\n",
+    "def load_data(file_name):\n",
+    "    \"\"\"Loads a CSV file into a Pandas DataFrame with error handling.\"\"\"\n",
+    "    try:\n",
+    "        df = pd.read_csv(file_name)\n",
+    "        logging.info(f\"Successfully loaded {file_name}\")\n",
+    "        return df\n",
+    "    except FileNotFoundError:\n",
+    "        logging.error(f\"Error: {file_name} not found. Please ensure it's in the same directory.\")\n",
+    "        return pd.DataFrame() # Return empty DataFrame on error\n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"Error loading {file_name}: {e}\")\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "# --- Task 1: Measure Data Accuracy using a Trusted Source (and \"Product Pricing\" Task) ---\n",
+    "# Description: Check if the prices in company_prices.csv match trusted_prices.csv.\n",
+    "print(\"\\n--- Task 1: Measure Data Accuracy using a Trusted Source (and Product Pricing Task) ---\")\n",
+    "\n",
+    "company_df_t1 = load_data('company_prices.csv')\n",
+    "trusted_df_t1 = load_data('trusted_prices.csv')\n",
+    "\n",
+    "if not company_df_t1.empty and not trusted_df_t1.empty:\n",
+    "    merged_df_t1 = pd.merge(company_df_t1, trusted_df_t1, on='product_id', suffixes=('_company', '_trusted'), how='inner')\n",
+    "\n",
+    "    if not merged_df_t1.empty:\n",
+    "        merged_df_t1['price_match'] = (merged_df_t1['price_company'] == merged_df_t1['price_trusted'])\n",
+    "        matching_prices_count = merged_df_t1['price_match'].sum()\n",
+    "        total_compared_products = len(merged_df_t1)\n",
+    "        accuracy = (matching_prices_count / total_compared_products) * 100 if total_compared_products > 0 else 0.0\n",
+    "\n",
+    "        print(f\"Total products compared (present in both files): {total_compared_products}\")\n",
+    "        print(f\"Number of matching prices: {matching_prices_count}\")\n",
+    "        print(f\"Data Accuracy (matching prices) against trusted source: {accuracy:.2f}%\")\n",
+    "\n",
+    "        discrepancies_t1 = merged_df_t1[merged_df_t1['price_match'] == False]\n",
+    "        if not discrepancies_t1.empty:\n",
+    "            print(\"\\nProducts with price discrepancies:\")\n",
+    "            print(discrepancies_t1[['product_id', 'price_company', 'price_trusted']])\n",
+    "        else:\n",
+    "            print(\"\\nNo price discrepancies found between company and trusted data for common products.\")\n",
+    "    else:\n",
+    "        print(\"No common products found between company_prices.csv and trusted_prices.csv to compare.\")\n",
+    "else:\n",
+    "    print(\"Skipping Task 1 due to file loading error.\")\n",
+    "\n",
+    "\n",
+    "# --- Task 2: Detect Incorrect Values ---\n",
+    "# Description: In company_prices.csv, detect any negative price values.\n",
+    "print(\"\\n--- Task 2: Detect Incorrect Values ---\")\n",
+    "\n",
+    "# Re-using company_df_t1 if it was loaded, otherwise load again\n",
+    "company_df_t2 = company_df_t1 if not company_df_t1.empty else load_data('company_prices.csv')\n",
+    "\n",
+    "if not company_df_t2.empty:\n",
+    "    incorrect_prices_df = company_df_t2[company_df_t2['price'] < 0]\n",
+    "\n",
+    "    if not incorrect_prices_df.empty:\n",
+    "        print(\"Detected incorrect (negative) price values:\")\n",
+    "        print(incorrect_prices_df)\n",
+    "    else:\n",
+    "        print(\"No negative price values found in company_prices.csv. All prices appear valid.\")\n",
+    "else:\n",
+    "    print(\"Skipping Task 2 due to file loading error.\")\n",
+    "\n",
+    "\n",
+    "# --- Task 3: Check Missing Data Rates ---\n",
+    "# Description: Calculate the percentage of missing values in customer_data.csv.\n",
+    "print(\"\\n--- Task 3: Check Missing Data Rates ---\")\n",
+    "\n",
+    "customer_df_t3 = load_data('customer_data.csv')\n",
+    "\n",
+    "if not customer_df_t3.empty:\n",
+    "    missing_values_count_t3 = customer_df_t3.isnull().sum()\n",
+    "    total_rows_t3 = len(customer_df_t3)\n",
+    "    if total_rows_t3 > 0:\n",
+    "        missing_values_percentage_t3 = (missing_values_count_t3 / total_rows_t3) * 100\n",
+    "    else:\n",
+    "        missing_values_percentage_t3 = pd.Series(0.0, index=customer_df_t3.columns) # Handle empty DataFrame\n",
+    "\n",
+    "    print(\"Missing values per column:\")\n",
+    "    print(missing_values_count_t3)\n",
+    "    print(\"\\nPercentage of missing values per column:\")\n",
+    "    print(missing_values_percentage_t3.round(2).astype(str) + '%')\n",
+    "\n",
+    "    total_cells_t3 = customer_df_t3.size\n",
+    "    total_missing_cells_t3 = missing_values_count_t3.sum()\n",
+    "    if total_cells_t3 > 0:\n",
+    "        overall_missing_rate_t3 = (total_missing_cells_t3 / total_cells_t3) * 100\n",
+    "        print(f\"\\nOverall missing data rate across all columns: {overall_missing_rate_t3:.2f}%\")\n",
+    "    else:\n",
+    "        print(\"Customer data DataFrame is empty, cannot calculate overall missing rate.\")\n",
+    "else:\n",
+    "    print(\"Skipping Task 3 due to file loading error.\")\n",
+    "\n",
+    "\n",
+    "# --- Task 4: Handling Partially Available Records ---\n",
+    "# Description: In customer_data.csv, identify records with missing \"email\" or \"phone number\" and decide whether to drop or fill them.\n",
+    "print(\"\\n--- Task 4: Handling Partially Available Records ---\")\n",
+    "\n",
+    "customer_df_t4 = customer_df_t3 if not customer_df_t3.empty else load_data('customer_data.csv')\n",
+    "\n",
+    "if not customer_df_t4.empty:\n",
+    "    # We will check for 'email' column based on our sample data.\n",
+    "    # If 'phone number' column exists, include it in the condition:\n",
+    "    # missing_contact_records = customer_df_t4[customer_df_t4['email'].isnull() | customer_df_t4['phone number'].isnull()]\n",
+    "    missing_email_records = customer_df_t4[customer_df_t4['email'].isnull()]\n",
+    "\n",
+    "    print(\"Records with missing 'email' (or 'phone number' if it existed):\")\n",
+    "    if not missing_email_records.empty:\n",
+    "        print(missing_email_records)\n",
+    "    else:\n",
+    "        print(\"No records found with missing 'email' (or 'phone number' if present).\")\n",
+    "\n",
+    "    # Option 1: Drop records\n",
+    "    print(\"\\n--- Option 1: Dropping records with missing contact info ---\")\n",
+    "    customer_df_dropped = customer_df_t4.dropna(subset=['email']) # Use ['email', 'phone number'] if both exist\n",
+    "    print(f\"Original number of records: {len(customer_df_t4)}\")\n",
+    "    print(f\"Number of records after dropping missing 'email': {len(customer_df_dropped)}\")\n",
+    "    print(\"DataFrame after dropping:\")\n",
+    "    print(customer_df_dropped.head()) # Use head() for brevity\n",
+    "\n",
+    "    # Option 2: Fill missing values\n",
+    "    print(\"\\n--- Option 2: Filling missing contact info with a placeholder ---\")\n",
+    "    customer_df_filled = customer_df_t4.copy()\n",
+    "    customer_df_filled['email'].fillna('missing@example.com', inplace=True)\n",
+    "    print(\"DataFrame after filling missing 'email' with 'missing@example.com':\")\n",
+    "    print(customer_df_filled.head()) # Use head() for brevity\n",
+    "else:\n",
+    "    print(\"Skipping Task 4 due to file loading error.\")\n",
+    "\n",
+    "\n",
+    "# --- Task: Find Conflicting Values Across Datasets ---\n",
+    "# Description: Find customers with conflicting \"email\" information in crm_customers.csv and erp_customers.csv.\n",
+    "print(\"\\n--- Task: Find Conflicting Values Across Datasets ---\")\n",
+    "\n",
+    "crm_df_conflict = load_data('crm_customers.csv')\n",
+    "erp_df_conflict = load_data('erp_customers.csv')\n",
+    "\n",
+    "if not crm_df_conflict.empty and not erp_df_conflict.empty:\n",
+    "    merged_customers_df = pd.merge(crm_df_conflict, erp_df_conflict, on='customer_id', suffixes=('_crm', '_erp'), how='inner')\n",
+    "\n",
+    "    conflicting_emails_df = merged_customers_df[\n",
+    "        (merged_customers_df['email_crm'] != merged_customers_df['email_erp']) &\n",
+    "        (merged_customers_df['email_crm'].notnull()) &\n",
+    "        (merged_customers_df['email_erp'].notnull())\n",
+    "    ]\n",
+    "\n",
+    "    if not conflicting_emails_df.empty:\n",
+    "        print(\"Customers with conflicting email information:\")\n",
+    "        print(conflicting_emails_df[['customer_id', 'name_crm', 'email_crm', 'email_erp']])\n",
+    "    else:\n",
+    "        print(\"No conflicting email information found for customers present in both datasets.\")\n",
+    "else:\n",
+    "    print(\"Skipping conflict detection due to file loading error.\")\n",
+    "\n",
+    "\n",
+    "# --- Task: Compare Data Completeness Over Time ---\n",
+    "# Description: Analyze the trend of missing data in sales_data.csv over several months.\n",
+    "print(\"\\n--- Task: Compare Data Completeness Over Time ---\")\n",
+    "\n",
+    "sales_df_completeness = load_data('sales_data.csv')\n",
+    "\n",
+    "if not sales_df_completeness.empty:\n",
+    "    sales_df_completeness['date'] = pd.to_datetime(sales_df_completeness['date'])\n",
+    "    sales_df_completeness['year_month'] = sales_df_completeness['date'].dt.to_period('M')\n",
+    "\n",
+    "    # Columns to check for missing values for this task\n",
+    "    cols_to_check = ['sales_amount', 'region', 'customer_segment']\n",
+    "    # Filter for columns that actually exist in the dataframe\n",
+    "    cols_to_check_existing = [col for col in cols_to_check if col in sales_df_completeness.columns]\n",
+    "\n",
+    "    if cols_to_check_existing:"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.7"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
