--- a/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_9.ipynb
+++ b/src/Module 7/Measuring Data Accuracy, Completeness & Consistency/Ques_9.ipynb
@@ -27,17 +27,102 @@
    "source": [
     "# Write your code from here"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns # For nicer plots\n",
+    "\n",
+    "# --- Task: Measuring Completeness - Customer Profiles ---\n",
+    "print(\"--- Task: Measuring Completeness - Customer Profiles ---\")\n",
+    "\n",
+    "# Load the customer data dataset\n",
+    "try:\n",
+    "    customer_df = pd.read_csv('customer_data.csv')\n",
+    "except FileNotFoundError:\n",
+    "    print(\"Error: Make sure 'customer_data.csv' is in the same directory.\")\n",
+    "    customer_df = pd.DataFrame() # Create empty DataFrame to avoid errors later\n",
+    "\n",
+    "if not customer_df.empty:\n",
+    "    # 1. Define required fields for a complete customer profile based on our sample data\n",
+    "    # (As per task description, this would include 'name', 'address', 'email', 'phone number'.\n",
+    "    # We'll use the fields available in our customer_data.csv sample: 'name', 'age', 'email', 'city')\n",
+    "    required_fields = ['name', 'age', 'email', 'city']\n",
+    "\n",
+    "    print(f\"\\nAnalyzing completeness for customer profile fields: {required_fields}\")\n",
+    "\n",
+    "    # 2. Analyze the dataset to count how many profiles have missing fields\n",
+    "    # A profile has 'missing fields' if any of the required_fields are null for that row.\n",
+    "    \n",
+    "    # Create a boolean Series where True means at least one required field is missing in that row\n",
+    "    customer_df['has_missing_required_field'] = customer_df[required_fields].isnull().any(axis=1)\n",
+    "    \n",
+    "    profiles_with_missing_fields_count = customer_df['has_missing_required_field'].sum()\n",
+    "    total_profiles = len(customer_df)\n",
+    "\n",
+    "    print(f\"Total customer profiles: {total_profiles}\")\n",
+    "    print(f\"Number of profiles with at least one missing required field: {profiles_with_missing_fields_count}\")\n",
+    "\n",
+    "    # 3. Calculate the percentage of missing data fields across all profiles.\n",
+    "    # This can be interpreted in a few ways:\n",
+    "    # a) Overall percentage of cells that are missing in the required fields subset\n",
+    "    # b) Percentage of profiles that are 'incomplete' (i.e., have at least one missing required field)\n",
+    "    # The task asks for \"percentage of missing data fields across all profiles\", which suggests (a).\n",
+    "    # Let's calculate both for clarity.\n",
+    "\n",
+    "    # --- Interpretation A: Overall percentage of missing cells within specified fields ---\n",
+    "    total_cells_in_required_fields = customer_df[required_fields].size\n",
+    "    total_missing_cells_in_required_fields = customer_df[required_fields].isnull().sum().sum()\n",
+    "\n",
+    "    if total_cells_in_required_fields > 0:\n",
+    "        overall_missing_percentage_fields = (total_missing_cells_in_required_fields / total_cells_in_required_fields) * 100\n",
+    "        print(f\"\\nOverall percentage of missing data across specified required fields: {overall_missing_percentage_fields:.2f}%\")\n",
+    "    else:\n",
+    "        print(\"\\nNo cells in required fields to evaluate completeness.\")\n",
+    "\n",
+    "\n",
+    "    # --- Interpretation B: Percentage of incomplete profiles ---\n",
+    "    if total_profiles > 0:\n",
+    "        percentage_incomplete_profiles = (profiles_with_missing_fields_count / total_profiles) * 100\n",
+    "        print(f\"Percentage of customer profiles that are incomplete (have at least one missing required field): {percentage_incomplete_profiles:.2f}%\")\n",
+    "    else:\n",
+    "        print(\"No profiles to calculate incomplete percentage.\")\n",
+    "\n",
+    "    # --- Visualization of missing data rates per field ---\n",
+    "    # This helps understand which specific fields contribute most to incompleteness.\n",
+    "    missing_percentage_per_field = customer_df[required_fields].isnull().sum() / total_profiles * 100\n",
+    "\n",
+    "    plt.figure(figsize=(10, 6))\n",
+    "    sns.barplot(x=missing_percentage_per_field.index, y=missing_percentage_per_field.values, palette='coolwarm')\n",
+    "    plt.title('Percentage of Missing Data per Required Customer Profile Field')\n",
+    "    plt.xlabel('Required Field')\n",
+    "    plt.ylabel('Percentage Missing (%)')\n",
+    "    plt.ylim(0, 100) # Ensure y-axis goes from 0 to 100\n",
+    "    for index, value in enumerate(missing_percentage_per_field.values):\n",
+    "        plt.text(index, value + 2, f\"{value:.2f}%\", ha='center') # Add percentage labels on bars\n",
+    "    plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()\n",
+    "\n",
+    "else:\n",
+    "    print(\"Skipping Task: Measuring Completeness - Customer Profiles due to file loading error.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.12.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
